修正(.envrc)：將mise設置改為環境變數
將原本的mise設置改為環境變數MISE_PYTHON_UV_VENV_AUTO，以提高可讀性和可維
護性。這樣的改動使得環境配置更為一致，並且能夠更方便地在不同環境中進行管
理。

--- a/.envrc
+++ b/.envrc
@@ -82,7 +82,7 @@ fi
 # Load python environment
 if [[ -f uv.lock ]] && command -v mise &>/dev/null; then
     # Setup mise to load uv venv
-    mise settings set python.uv_venv_auto true
+    export MISE_PYTHON_UV_VENV_AUTO=true
 elif [[ -f pyproject.toml ]] && command -v poetry &>/dev/null && grep -q poetry pyproject.toml; then
     log_status "loading Poetry"
 
