fix(index.html): 修正bookmarklet的JavaScript代碼
修正了bookmarklet的JavaScript代碼，簡化了邏輯並提高了可讀性，這樣可以確
保功能正常運作並提升使用者體驗。

chore(pyproject.toml): 更新專案描述和依賴

更新了專案的描述，添加了授權資訊，並清理了依賴項，這有助於提供更準確的專
案資訊，並確保依賴的清晰性。

fix(scripts/update_bookmarklet.py): 使用terser進行JavaScript壓縮

在更新bookmarklet的腳本中，新增了使用terser進行JavaScript代碼壓縮的功能，
這樣可以提高代碼的執行效率，並確保生成的代碼更小且更快。

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,35 @@ Thumbs.db
 .vscode
 *.swp
 *.swo
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+.env
+.venv
+venv/
+ENV/
+
+# uv
+.uv/
