修正(pre-commit-config.yaml, update_bookmarklet.py)：更新預提交配置以包含新的腳本
將預提交配置中的文件範圍擴展到包括新的update_bookmarklet.py腳本，以確保
在提交時自動運行該腳本。更新了update_bookmarklet.py腳本以改進JavaScript
代碼的最小化過程，現在使用urllib.parse進行URL編碼，並移除了基本最小化的
回退方法，以簡化代碼並提高可讀性。

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
         name: Update Bookmarklet
         entry: uv run python scripts/update_bookmarklet.py
         language: python
-        files: ^(src/readmoo-readdict-helper\.js|templates/index\.html)$
+        files: ^(src/readmoo-readdict-helper\.js|templates/index\.html|scripts/update_bookmarklet\.py)$
         pass_filenames: false
         # Fast skip is implemented in the script
         # Requires: terser (npm install -g terser) for optimal minification
